public/styles.css
body {
  background-color: #ffe6e6;
  font-family: 'Nunito', sans-serif;
  color: white;
  margin: 0px 0px 20px 0px
}

h1 {
  font-family: 'Shippori Mincho B1', serif;
}

p {
  text-align: justify
}

figure {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 5%;
  width: 900px;
  background-color: #ffe6e6;
  border-radius: 10px;
  padding: 20px 10px 10px 10px;
}

figure a {
  text-decoration: none;
  color: white
}

button {
  width: 150px;
  font-weight: bold;
  font-family: 'Nunito', sans-serif;
  border: none;
  padding: 10px;
  border-radius: 5px;
  margin: 10px 5px;
  background-color: #900c3f;
  color: white;
}


button:hover {
  cursor: pointer;
  color: #900c3f;
  background-color: white;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* HEADER */
.header {
  flex-direction: column;
  width: 100vw;
  height: 175px;
  padding: 10px 0px 10px 0px;
  border-bottom: 3px solid white;
  outline: 4px solid #ffcac2;
  margin-left: auto;
  margin-right: auto;
  background-color: #900c3f;
  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23bb4c77' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.header h1 {
  margin: 0px;
  padding: 0px;
  font-family: 'Parisienne', cursive;
  font-size: 3em;
}

#logoContainer {
  display: flex;
  justify-content: space-between;
  width: 100px
}

#logoContainer img {
  width: 20px;
  height: 20px
}

/* INTRO AND ABOUT */
.intro {
  display: flex;
  justify-content: center;
  align-items: center;
}

#profilePic {
  height: auto;
  width: 35%;
  margin: 3%;
  border-radius: 10px;
  border: 3px solid #fc9d9d;
  box-shadow: 0px 3px 5px #c4b1b1;
}

.block {
  flex-direction: column;
  margin: 5%;
  padding: 0px 20px 10px 20px;
  background-color: #fc9d9d;
  box-shadow: 0px 3px 5px #c4b1b1;
  border-radius: 10px;
}

.sectionTitle {
  text-align: center;
  margin-top: 40px;
  width: 100vw;
  padding: 5px 0px 10px;
  background-color: #fc9d9d;
  border-top: 3px solid #ffcac2;
  border-bottom: 3px solid #ffcac2;
  outline: 3px solid white
}

/* PROJECTS */
.projects {
  flex-direction: column;
  background-color: #fab7b7;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23fbe3e3' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  margin-bottom: 100px;
}

.projectRow {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%
}

.projectRow .block {
  width: 80%;
  box-shadow: 0px 3px 5px #ad8080;
}

.projectRow h3 {
  text-align: center;
}

.projectImage {
  display: flex;
  justify-content: center;
  align-items: center;
  height: auto;
  background-color: white;
  border: 3px solid #fc9d9d;
}

.projectImage img {
  height: auto;
  width: 100%;
}

.techStackList {
  flex-direction: column;
  padding: 0px 10px;
  text-align: justify;
  color: #900c3f
}

.buttons {
  width: 80%;
  display: flex;
  justify-content: space-around
}

/* TECH STACK */
.techStack {
  flex-direction: column;
  background-color: #fcb1b1;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 40' width='80' height='40'%3E%3Cpath fill='%23ffcfcf' fill-opacity='1' d='M0 40a19.96 19.96 0 0 1 5.9-14.11 20.17 20.17 0 0 1 19.44-5.2A20 20 0 0 1 20.2 40H0zM65.32.75A20.02 20.02 0 0 1 40.8 25.26 20.02 20.02 0 0 1 65.32.76zM.07 0h20.1l-.08.07A20.02 20.02 0 0 1 .75 5.25 20.08 20.08 0 0 1 .07 0zm1.94 40h2.53l4.26-4.24v-9.78A17.96 17.96 0 0 0 2 40zm5.38 0h9.8a17.98 17.98 0 0 0 6.67-16.42L7.4 40zm3.43-15.42v9.17l11.62-11.59c-3.97-.5-8.08.3-11.62 2.42zm32.86-.78A18 18 0 0 0 63.85 3.63L43.68 23.8zm7.2-19.17v9.15L62.43 2.22c-3.96-.5-8.05.3-11.57 2.4zm-3.49 2.72c-4.1 4.1-5.81 9.69-5.13 15.03l6.61-6.6V6.02c-.51.41-1 .85-1.48 1.33zM17.18 0H7.42L3.64 3.78A18 18 0 0 0 17.18 0zM2.08 0c-.01.8.04 1.58.14 2.37L4.59 0H2.07z'%3E%3C/path%3E%3C/svg%3E");
  margin-bottom: 100px
}

.techStack img {
  height: auto;
  width: 40%;
  border: 3px solid #900c3f
}

.lightBlock {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: 50%;
  margin: 3%;
  padding: 20px;
  background-color: #ffe6e6;
  box-shadow: 0px 3px 5px #c78b8b;
  border-radius: 10px;
}

.stackListContainer {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  text-align: right;
}

.noMargin {
  margin-bottom: 0;
}

.link {
  text-decoration: none;
  color: white;
  background-color: #900c3f;
}

.link:hover {
  color: #900c3f;
  background-color: white;
}

/* CONNECT */
.connect {
  background-color: #fab7b7;
  background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%23fc9d9d' fill-opacity='0.91' fill-rule='evenodd'/%3E%3C/svg%3E");
  margin-bottom: 100px
}

.connect a {
  text-decoration: underline;
  color: white;
}

.connect .block {
  box-shadow: 0px 3px 5px #c78b8b;
}

#connectDetails {
  flex-direction: column;
  max-height: 500px;
  width: 60%
}

#spotifyBlock {
  height: 500px;
  width: 30%;
}

.connect img {
  width: 30%;
  height: auto
}

#spotify {
  display: flex;
  margin-bottom: 20px;
  height: 100%;
  border: 3px solid white;
}

@media only screen and (max-width: 1160px) {
  .buttons {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

/* For small screens and phone screens */
@media only screen and (max-width: 800px) {
  .intro {
    flex-direction: column;
  }
  #profilePic {
    width: 85%;
    height: auto;
    margin-top: 40px
  }
  .projectRow {
    flex-direction: column;
    padding-bottom: 20px
  }
  figure {
    width: 80%
  }
  .lightBlock {
    flex-direction: column;
    width: 100%;
    margin: 5%
  }
  .techStack img {
    width: 100%
  }
  .connect {
    flex-direction: column;
  }
  #connectDetails {
    width: 100%;
    margin: 5%
  }
  #spotifyBlock {
    width: 80%;
    margin: 5%
  }
}

